remove extra pdf figures generated by sweave, revise makefiles and bump version
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_11/madman/Rpacks/ggbio@70163 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/Makefile
+++ b/inst/doc/Makefile
@@ -9,6 +9,7 @@ clean:
 	rm -f *.tex *.bbl *.blg *.aux *.out *.log *.spl *tikzDictionary *.toc
 
 %.pdf: %.Rnw
+	rm -f *.pdf
 	$(R_HOME)/bin/Rscript -e "library(knitr); knit2pdf('$*.Rnw')"
 
 #%.pdf: %.Rnw
