add .Rinstignore .Rbuildignore
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_11/madman/Rpacks/ggbio@70354 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/Makefile
+++ b/inst/doc/Makefile
@@ -7,7 +7,7 @@ all: $(PDFS)
 
 clean:
 	rm -f *.tex *.bbl *.blg *.aux *.out *.log *.spl *tikzDictionary *.toc
-	rm -f figures/ggbio-*	
+	rm -f figures/ggbio-*	ggbio-*
 	
 %.pdf: %.Rnw
 	$(R_HOME)/bin/Rscript -e "library(knitr); knit2pdf('$*.Rnw')"
