changes for compatibility with knitr 1.0
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_11/madman/Rpacks/ggbio@72540 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/Makefile
+++ b/inst/doc/Makefile
@@ -8,7 +8,10 @@ all: $(PDFS)
 clean:
 	rm -f *.tex *.bbl *.blg *.aux *.out *.log *.spl *tikzDictionary *.toc
 	rm -f figures/ggbio-*	ggbio-*
+	rm -f ggbio.Rnw
+	cp ggbio.Rnw.stub ggbio.Rnw
 	
 %.pdf: %.Rnw
+	cp ggbio.Rnw.knitr ggbio.Rnw
 	$(R_HOME)/bin/Rscript -e "library(knitr); knit2pdf('$*.Rnw')"
 
