fix summary import issues
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_12/madman/Rpacks/ggbio@75326 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,7 +44,7 @@ importFrom(GenomicRanges, "seqnames<-",
            GRanges, GRangesList, Seqinfo, seqlengths, "seqlengths<-")
 importMethodsFrom(GenomicRanges, ranges, "ranges<-",
                   start, end, width, "start<-", "end<-", "width<-",
-                  seqnames, seqinfo, show, summary,
+                  seqnames, seqinfo, show, 
                    "elementMetadata<-", elementMetadata,
                   as.data.frame, keepSeqlevels, renameSeqlevels,
                   sort)
