export nolegend and fix limits computation in autoplot,GRanges
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_13/madman/Rpacks/ggbio@83284 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,7 +139,7 @@ export(tracks,
        plotRangesLinkedToData)
 
 export(theme_null, theme_alignment, theme_clear, theme_tracks_sunset,
-       theme_pack_panels, theme_noexpand, theme_genome)
+       theme_pack_panels, theme_noexpand, theme_genome, nolegend)
 
 export(ggsave)
 exportMethods(cbind, rbind)
