update Ideogram class, update manual to remove warning, fix bugs caused by ideogram in tracks
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_13/madman/Rpacks/ggbio@83708 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,7 +123,7 @@ exportMethods(stat_aggregate,
 exportMethods(layout_karyogram,
               layout_circle)
 
-export(circle)
+## export(circle)
 ## coord
 ## exportMethods(coord_genome)
 export(tracks,
@@ -134,7 +134,8 @@ export(tracks,
        plotStackedOverview,
        plotKaryogram,       
        plotSingleChrom,
-       plotIdeogram,       
+       plotIdeogram,
+       Ideogram,
        plotGrandLinear,
        plotRangesLinkedToData)
 
