--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ggbio
-Version: 1.12.0
+Version: 1.12.1
 Title: Visualization tools for genomic data.
 Description: The ggbio package extends and specializes the grammar of
         graphics for biological data. The graphics are designed to
@@ -15,14 +15,14 @@ Author: Tengfei Yin, Dianne Cook, Michael Lawrence
 Maintainer: Tengfei Yin <yintengfei@gmail.com>
 Depends: methods, BiocGenerics, ggplot2 (>= 0.9.3)
 Imports: grid, grDevices, graphics, stats, utils, biovizBase(>=
-        1.11.11), reshape2, gtable, Biobase, IRanges (>= 1.21.19),
+        1.12.1), reshape2, gtable, Biobase, IRanges (>= 1.21.19),
         GenomicRanges (>= 1.13.3), GenomicFeatures, Rsamtools (>=
         1.13.1), GenomicAlignments, BSgenome, gridExtra, scales,
-        VariantAnnotation, Hmisc, rtracklayer, Biostrings, proto
+        VariantAnnotation, Hmisc, rtracklayer, Biostrings
 VignetteBuilder: knitr
 Suggests: vsn, BSgenome.Hsapiens.UCSC.hg19,
         TxDb.Hsapiens.UCSC.hg19.knownGene, chipseq,
-        TxDb.Mmusculus.UCSC.mm9.knownGene, knitr, BiocStyle
+        TxDb.Mmusculus.UCSC.mm9.knownGene, knitr, BiocStyle, Homo.sapiens
 URL: http://tengfei.github.com/ggbio/
 BugReports: https://github.com/tengfei/ggbio/issues
 License: Artistic-2.0
