latticeGrob is no longer exported from gridExtra
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_1/madman/Rpacks/ggbio@106492 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,7 @@ import(gtable)
 importFrom(reshape2, melt)
 importFrom(scales, cbreaks, rescale, expand_range, math_format,
            scientific_format, trans_breaks, trans_format)
-importFrom(gridExtra, grid.arrange, arrangeGrob, latticeGrob)
+importFrom(gridExtra, grid.arrange, arrangeGrob)
 importFrom(Hmisc, bezier)
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
