--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,7 +79,7 @@ exportMethods(autoplot, rescale, fixed, "fixed<-",
               xlim, "xlim<-", reset, backup,
               bgColor, "bgColor<-", labeled, "labeled<-",
               mutable, "mutable<-", height, "height<-",
-              hasAxis, "hasAxis<-", ggplot)
+              hasAxis, "hasAxis<-")
 
 
 export(arrangeGrobByParsingLegend, ggbio, GGbio)
@@ -142,3 +142,11 @@ export(zoom, zoom_in, zoom_out, nextView, prevView)
 ##               cached_item, "cached_item<-", addItem, addWhich,
 ##               cached_which, cbind, rbind)
 ## export(PlotList, Tracked, Plot, Grob)
+
+S3method(ggplot, Vector)
+S3method(ggplot, matrix)
+S3method(ggplot, ExpressionSet)
+S3method(ggplot, RsamtoolsFile)
+S3method(ggplot, character)
+S3method(ggplot, TxDb)
+S3method(ggplot, BSgenome)
