--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ggbio
-Version: 1.18.2
+Version: 1.18.3
 Title: Visualization tools for genomic data.
 Description: The ggbio package extends and specializes the grammar of
         graphics for biological data. The graphics are designed to
@@ -11,8 +11,10 @@ Description: The ggbio package extends and specializes the grammar of
         and grand linear views. High-level plots include sequence
         fragment length, edge-linked interval to data view, mismatch
         pileup, and several splicing summaries.
-Author: Tengfei Yin, Dianne Cook, Michael Lawrence
-Maintainer: Tengfei Yin <yintengfei@gmail.com>
+Authors@R: c(person("Tengfei", "Yin", role=c("aut", "cre"),
+                 email="yintengfei@gmail.com"),
+          person("Michael", "Lawrence", role=c("aut", "ths")),
+          person("Dianne", "Cook", role=c("aut", "ths")))
 Depends: methods, BiocGenerics, ggplot2 (>= 1.0.0)
 Imports: grid, grDevices, graphics, stats, utils, gridExtra, scales, reshape2,
         gtable, Hmisc, biovizBase (>= 1.17.1), Biobase, S4Vectors,
